# PortfolioProjects

./: .gitattributes  .gitignore  LICENSE  README.md
audio-to-emotion-nlp/: .gitignore  API_Dockerfile  Docker_notes.md  README.md  environment32.yaml  pyproject.toml  requirements.txt
audio-to-emotion-nlp/.github/workflows/: CI_CD.md  docker_publish.yml  test.yml
audio-to-emotion-nlp/airflow/: requirements.txt
audio-to-emotion-nlp/airflow/dags/: data_pipeline_dag.py  dynamic_data_pipeline_dag.py  transcribe_preprocess_dag.py
audio-to-emotion-nlp/airflow/dags/split_script/: split.py
audio-to-emotion-nlp/airflow/jobs/: Transcribe_process_job.py
audio-to-emotion-nlp/azure/: prepare_data.py  transcribe_job.yaml
audio-to-emotion-nlp/data_processing/: Transcribe_process_job.py  upload_assets.py
audio-to-emotion-nlp/docs/: README.md  after-lock-final.txt  after-lock.txt  before-lock.txt  cli.rst  conf.py  demo.rst  evaluate.rst  index.rst  models.rst  transcription.rst
audio-to-emotion-nlp/docs/_build/doctrees/: app.doctree  cli.doctree  config.doctree  data.doctree  demo.doctree  deployment.doctree  emotion.doctree  environment.pickle  evaluate.doctree  index.doctree  models.doctree  register.doctree  testing.doctree  train.doctree  transcription.doctree  utils.doctree
audio-to-emotion-nlp/docs/_build/html/: .buildinfo  app.html  cli.html  config.html  data.html  demo.html  deployment.html  emotion.html  evaluate.html  genindex.html  index.html  models.html  objects.inv  py-modindex.html  register.html  search.html  searchindex.js  testing.html  train.html  transcription.html  utils.html
audio-to-emotion-nlp/pipeline/: README.md  config.json  training_pipeline.py
audio-to-emotion-nlp/project_plan/: NLP Project Plan.docx  tree.txt  ~$oud_Cost_Evaluation.docx
audio-to-emotion-nlp/src/: README.md
audio-to-emotion-nlp/src/app/: API_main.py  app_README.md  azure_client.py  inference.py  model_loader.py  predict.py  test_api.py  test_predict.py
audio-to-emotion-nlp/src/checkpoint-3906/: config.json  model.safetensors  optimizer.pt  rng_state.pth  scaler.pt  scheduler.pt  tokenizer.json  trainer_state.json
audio-to-emotion-nlp/src/classification/: emotion.py
audio-to-emotion-nlp/src/cli/: CLI_readme.md  main.py
audio-to-emotion-nlp/src/comp/: config.json  evaluate.py  register.py  train.py
audio-to-emotion-nlp/src/config/: config.py
audio-to-emotion-nlp/src/data/: CLI_data_preprocessing.py  data_ingestion.py
audio-to-emotion-nlp/src/demo/: api_client.py  app_ui.py  demo_README.md  requirements.txt
audio-to-emotion-nlp/src/deployment/: cloud_deploy.py  deploy_kubernetes_endpoint.py  deployment_README.md  score.py
audio-to-emotion-nlp/src/models/: CLI_evaluation.py  CLI_models.py
audio-to-emotion-nlp/src/transcription/: transcribe.py
audio-to-emotion-nlp/src/utils/: helpers.py  logger.py
audio-to-emotion-nlp/tests/: README.md  conftest.py
audio-to-emotion-nlp/tests/app/: test_API_main.py  test_azure_client.py  test_inference.py  test_mp3_asset.py  test_predict.py
audio-to-emotion-nlp/tests/classification/: test_emotion.py
audio-to-emotion-nlp/tests/models/: test_CLI_evaluation.py  test_CLI_models.py
audio-to-emotion-nlp/tests/transcription/: test_transcribe.py
audio-to-emotion-nlp/tests/utils/: test_helpers.py  test_logger.py
time-series-forecasting/: README.md  pyproject.toml
time-series-forecasting/docs/: AI System Compliance Checklist for EU AI Act.docx  AI_Project_Canvas_Group12 - Copy.docx
time-series-forecasting/models/: Decision-Tree-Model.ipynb  Gradient-boosting-Model.ipynb  NeuralNetwork.ipynb  Random-Forest-Model.ipynb
time-series-forecasting/models/.ipynb_checkpoints/: Decision-Tree-Model-checkpoint.ipynb  Gradient-boosting-Model-checkpoint.ipynb  Random-Forest-Model-checkpoint.ipynb
time-series-forecasting/notebooks/: DataModeling.ipynb
time-series-forecasting/preprocessing/: EDA.ipynb  Heatmaps.ipynb  data_understaning.ipynb  encoding_labels.txt
time-series-forecasting/project_plan/: Project plan.docx
time-series-forecasting/streamlit_app/: app.py
(+89 files in other folders)
